# astock_smart_assistant

./: .gitignore  Dockerfile  README.md  app.py  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  stock_detail.py  stock_screener.py
src/astock_assistant/: app.py  stock_detail.py  stock_screener.py
src/astock_assistant/config/: logging_config.py  settings.py
tests/: test_utils.py
